# ssh-liaison-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs
src/mcp/: mod.rs  tools.rs
src/ssh/: channel.rs  config.rs  mod.rs  session.rs
