[package]
name = "ssh-liaison-mcp"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "ssh-liaison-mcp"
path = "src/main.rs"

[dependencies]
async-ssh2-lite = { version = "0.5", features = ["tokio"] }
anyhow = "1.0"
rmcp = { version = "0.12", features = ["transport-io"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
schemars = { version = "1", features = ["derive"] }

