[package]
name = "ssh-liaison-mcp"
version = "0.2.1"
edition = "2024"
description = "SSH connection and command execution via Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/Citizen4our/ssh-liaison-mcp"
keywords = ["ssh", "mcp", "cli", "remote", "automation"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "ssh-liaison-mcp"
path = "src/main.rs"

[dependencies]
async-ssh2-lite = { version = "0.5", features = ["tokio"] }
anyhow = "1.0"
rmcp = { version = "0.12", features = ["transport-io"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
schemars = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true